--- a/PizzaShop_FrontEnd/src/modules/app/menu/menu.html
+++ b/PizzaShop_FrontEnd/src/modules/app/menu/menu.html
@@ -1,16 +1,17 @@
-<md-sidenav md-component-id="sidenav" class="md-sidenav-left" md-component-id="left" style="position:fixed" md-is-locked-open="$mdMedia('gt-sm')"  md-whiteframe="4">
+<md-sidenav md-component-id="sidenav" class="md-sidenav-left" md-component-id="left" style="position:fixed" md-is-locked-open="$mdMedia('gt-sm')"
+  md-whiteframe="4">
   <md-toolbar class="md-theme-indigo">
     <h1 class="md-toolbar-tools">La pizzería del Tito Jan</h1>
   </md-toolbar>
   <md-content layout="column" layout-padding>
-      <md-button class="md-primary" ui-sref="adduser" ng-click="$ctrl.closeSidenav()">
-          Registro
-        </md-button>
+    <md-button class="md-primary" ui-sref="adduser" ng-click="$ctrl.closeSidenav()">
+      Registro
+    </md-button>
     <md-button class="md-primary" ui-sref="pizzalist" ng-click="$ctrl.closeSidenav()">
-      show pizzas
+      Carta de pizzas
     </md-button>
     <md-button class="md-primary" ui-sref="addpizza" ng-click="$ctrl.closeSidenav()">
-      Add pizza
+      Añadir pizza
     </md-button>
   </md-content>
 </md-sidenav>
