Register with AngularJS

--- a/PizzaShop_FrontEnd/src/modules/user/add/adduser.html
+++ b/PizzaShop_FrontEnd/src/modules/user/add/adduser.html
@@ -2,6 +2,11 @@
     <form name="userForm" ng-submit="$ctrl.saveUser()">
         <div layout="column">
             <md-input-container class="md-block">
+                <label>Nombre de usuario</label>
+                <input required type="string" name="userName" ng-model="$ctrl.user.userName" />
+            </md-input-container>
+            <md-button class="md-primary" type="submit">Confirmar registro</md-button>
+            <md-input-container class="md-block">
                 <label>Correo electrónico</label>
                 <input required type="email" name="email" ng-model="$ctrl.user.email" />
                 <div ng-messages="userForm.email.$error" md-auto-hide="false">
@@ -21,12 +26,8 @@
             </md-input-container>
             <md-input-container class="md-block">
                 <label>Repetir contraseña</label>
-                <input required type="password" name="passwordAgain" ng-model="$ctrl.user.passwordAgain" />
+                <input required type="password" name="confirmPassword" ng-model="$ctrl.user.confirmPassword" />
             </md-input-container>
-            <md-input-container class="md-block">
-                <label>Nombre de usuario</label>
-                <input required type="string" name="userName" ng-model="$ctrl.user.userName" />
-            </md-input-container>
-            <md-button class="md-primary" type="submit">Confirmar registro</md-button>
+
     </form>
 </md-content>
