--- a/PizzaShop_FrontEnd/src/modules/user/add/adduser.html
+++ b/PizzaShop_FrontEnd/src/modules/user/add/adduser.html
@@ -5,7 +5,7 @@
                 <label>Nombre de usuario</label>
                 <input required type="string" name="userName" ng-model="$ctrl.user.userName" />
             </md-input-container>
-            <md-button class="md-primary" type="submit">Confirmar registro</md-button>
+            
             <md-input-container class="md-block">
                 <label>Correo electrónico</label>
                 <input required type="email" name="email" ng-model="$ctrl.user.email" />
@@ -20,7 +20,7 @@
                 <input required type="password" name="password" ng-model="$ctrl.user.password" minlength="5" />
                 <div ng-messages="userForm.password.$error" md-auto-hide="false">
                     <div ng-message="required">
-                        La contraseña debe tener una longitud mínima de 5 caracteres.
+                        La contraseña debe tener una longitud mínima de 8 caracteres, y contener mayúsculas, minúsculas, números y símbolos.
                     </div>
                 </div>
             </md-input-container>
@@ -28,6 +28,6 @@
                 <label>Repetir contraseña</label>
                 <input required type="password" name="confirmPassword" ng-model="$ctrl.user.confirmPassword" />
             </md-input-container>
-
+            <md-button class="md-primary" type="submit">Confirmar registro</md-button>
     </form>
 </md-content>
