Ahora el token no se pierde y se puede hacer LogOut

--- a/PizzaShop_FrontEnd/src/modules/user/login/login.html
+++ b/PizzaShop_FrontEnd/src/modules/user/login/login.html
@@ -15,5 +15,6 @@
                 </div>
             </md-input-container>
             <md-button class="md-primary" type="submit">Acceder</md-button>
+            <md-button class="md-primary" ui-sref="adduser" ng-click="$ctrl.logOut()">Cerrar sesión</md-button>
     </form>
 </md-content>
