--- a/PizzaShop_FrontEnd/src/modules/ingredient/selector/selector.html
+++ b/PizzaShop_FrontEnd/src/modules/ingredient/selector/selector.html
@@ -1,5 +1,5 @@
 <md-select ng-model="$ctrl.pizza.ingredients" multiple>
     <md-option ng-repeat="ingredient in $ctrl.ingredients" ng-value="{{ingredient}}">
-        {{ingredient.name}}
+        {{ingredient.Name}}
     </md-option>
 </md-select>
