Añadir pizzas con nombre, ingredientes e imagenes.

--- a/PizzaShop_FrontEnd/src/modules/pizza/list/pizzalist.html
+++ b/PizzaShop_FrontEnd/src/modules/pizza/list/pizzalist.html
@@ -3,7 +3,7 @@
         <md-card class="md-button pizza-card" ui-sref="pizzas({id: pizza.id})">
             <md-card-title>
                 <md-card-title-text>
-                    <span class="md-seccondary">{{pizza.name}}</span>
+                    <span class="md-seccondary">{{pizza.Name}}</span>
                 </md-card-title-text>
             </md-card-title>
             <img ng-src="{{pizza.img}}" class="md-card-image">
