Intento de obtener imágenes desde FE

--- a/PizzaShop_FrontEnd/src/modules/pizza/details/pizzacard/pizzacard.html
+++ b/PizzaShop_FrontEnd/src/modules/pizza/details/pizzacard/pizzacard.html
@@ -1,5 +1,5 @@
 <md-card class="pizza-card">
-    <img ng-src="{{$ctrl.img}}" class="md-card-image">
+    <img ng-src="{{$ctrl.URL}}" class="md-card-image">
     <md-card-title>
         <md-card-title-text>
             <span class="md-headline" style="text-align: center">{{ $ctrl.name | capitalize }}</span>
