--- a/PizzaShop_FrontEnd/src/modules/pizza/add/imageuploader/imguploader.html
+++ b/PizzaShop_FrontEnd/src/modules/pizza/add/imageuploader/imguploader.html
@@ -1,8 +1,8 @@
 <div layout="row">
     <div>
         <div class="md-button md-primary" type="file" il-img-viewer ngf-select ng-required ng-model="$ctrl.pizza.img" name="file" ngf-max-size="2MB"
-            ngf-resize="{width: 200, height: 200}">
-            Upload Image
+            ngf-resize="{width: 100, height: 100}">
+            Añadir imagen
         </div>
         <label class="md-subhead">{{$ctrl.pizza.img.$ngfName}}</label>
         <div>
