--- a/PizzaShop_FrontEnd/src/modules/pizza/details/pizzacard/pizzacard.html
+++ b/PizzaShop_FrontEnd/src/modules/pizza/details/pizzacard/pizzacard.html
@@ -2,7 +2,7 @@
     <img ng-src="{{$ctrl.URL}}" class="md-card-image">
     <md-card-title>
         <md-card-title-text>
-            <span class="md-headline" style="text-align: center">{{ $ctrl.name | capitalize }}</span>
+            <span class="md-headline" style="text-align: left">{{ $ctrl.name }}</span>
         </md-card-title-text>
     </md-card-title>
 </md-card>
