--- a/PizzaShop_FrontEnd/src/modules/pizza/list/pizzalist.html
+++ b/PizzaShop_FrontEnd/src/modules/pizza/list/pizzalist.html
@@ -3,9 +3,9 @@
         <md-card class="md-button pizza-card" ui-sref="pizzas({id: pizza.id})">
             <md-card-title>
                 <md-card-title-text>
-                    <span class="md-seccondary">{{pizza.Name}}</span>
+                    <span class="md-secondary">{{pizza.Name}}</span>
                 </md-card-title-text>
             </md-card-title>
-            <img ng-src="{{pizza.img}}" class="md-card-image">
+            <img ng-src="{{pizza.URL}}" class="md-card-image">
         </md-card>
 </md-content>
