--- a/PizzaShop_FrontEnd/src/modules/app/menu/menu.html
+++ b/PizzaShop_FrontEnd/src/modules/app/menu/menu.html
@@ -1,6 +1,7 @@
 <md-sidenav md-component-id="sidenav" class="md-sidenav-left" md-component-id="left" style="position:fixed" md-is-locked-open="$mdMedia('gt-sm')"
   md-whiteframe="4">
   <md-toolbar class="md-theme-indigo">
+    <img ng-src="img/logo.png" height="203"widht="320">
     <h1 class="md-toolbar-tools">La pizzería del Tito Jan</h1>
   </md-toolbar>
   <md-content layout="column" layout-padding>
